--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   </p>
   <h2>封筒設計図</h2>
-  <img scr="img/pic1.png" alt="土台">
-  <img scr="img/pic2.png" alt="表紙">
+  <img scr="./img/pic1.png" alt="土台">
+  <img scr="./img/pic2.png" alt="表紙">
 </body>
 </html>
