--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>手紙の内容</title>
 </head>
 
@@ -95,5 +96,14 @@
   <h2>封筒設計図</h2>
   <img src="./img/pic1.png" alt="土台">
   <img src="./img/pic2.png" alt="表紙">
+
+  <style>
+  img {
+    width: 100%;     /* 画面の幅に合わせる */
+    height: auto;    /* アスペクト比を維持して高さを自動調整 */
+    display: block;  /* 不要な隙間を防ぐ（任意） */
+  }
+</style>
+
 </body>
 </html>
