--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 ⑤	MVの歌詞の水色の部分を読んでそれに従う<br/><br/>
 
 ・準備するもの<br/>
-①	手紙(ちゃんと気持ちのこもったもの。謎にも使えるようにする)<br/>
+①	手紙(A5,ちゃんと気持ちのこもったもの。謎にも使えるようにする)<br/>
 ②	謎解き(小問いくつか、大問１(気力によってボリュームは変える))<br/>
 ③	MV(これが一番大変。フルにするかは迷う。謎にも使えるようにする。)<br/>
 ④	Webサイト(ヒント、回答入力、動画埋め込み)<br/><br/>
