--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
  2年半、たくさんの思い出をありがとう。 一生の俺の推し、りあち。卒業おめでとう。
   </p>
   <h2>たくしーより</h2><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+  <img src="./img/tegami1.png" alt="1枚目">
+  <img src="./img/tegami2.png" alt="2枚目">
+  <img src="./img/tegami3.png" alt="3枚目">
+  <img src="./img/tegami4.png" alt="4枚目">
+  <img src="./img/tegami5.png" alt="5枚目">
+  <img src="./img/tegami6.png" alt="6枚目">
+  <img src="./img/tegami7.png" alt="7枚目">
   
   <h1>「りあち卒業祝いプロジェクト」</h1>
   <p>
