--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 通った文字を読もう<br/>
 答えはそつぎょう<br/>
 タクシーをりあにしてもう一度読もう<br/>
-最推しが答え<br/>
+ねこ→こあら→らくだ→ダイヤ<br/>
+推しが答え<br/>
 クリア　動画　ここから先は自分の力で考えましょう<br/>
 水色の歌詞を読む　「りあちのアイコン5回タップしよう」<br/><br/>
 
