--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <a href="https://hromssp.obc.jp/yav77ljo0kp7/pi6olqukt4v9/">おびく</a>
   <h1>りあちへ</h1>
   <p>
   卒業おめでとう。2年半、本当にお世話になりました。素敵な思い出をありがとう。ということで感謝の手紙を書いてみたんだけど、手紙ってすごいよね。俺は会話が上手くないから、思っていることを上手に伝えられないことが多いけど。手紙だとちゃんと伝えられる気がする。<br/>
