--- a/index.html
+++ b/index.html
@@ -90,24 +90,46 @@
 歌詞<br/>
 「りあちのアイコン5かいタップ」<br/><br/>
 
+(アルバム(≠編))<br/>
 今までどれだけのありがとう伝えてこれただろう<br/>
 リアルにごめんの過ちの日々も続いたよな<br/>
+(アルバム(RicoRico.編))<br/>
 精一杯の愛を渡せてるのかなって悩みこんだ日も<br/>
-これだけは誤解ないようにめっちゃ君が好き<br/><br/>
+これだけは誤解ないように(アルバム閉じる(表紙「りあちとの２年半」))めっちゃ君が好き<br/><br/>
 
+(シーンチェンジ、沈んでいく感じ)<br/>
+(たくさんのチェキが遠くに消えていく)<br/>
 何度気が沈んだって前向けず座り込んだって<br/>
+(手を前に伸ばす)<br/>
 声を上げ叫んで立ち上がった<br/>
+(奥からどんどん光っていく)<br/>
 ただ君に会いたいから<br/>
 <br/>
+(ブラーシーンチェンジ)<br/>
+(≠まで走り扉を開ける)(「これだけは絶対に」)<br/>
 一生分の感謝と一生分の愛を今君に<br/>
+(RicoRicoまで走り扉開ける)(「君に伝えなければ」)<br/>
 捧ぐから一層大きな歌声で<br/>
-未来までも夢が覚めても軽快なタップダンスでも踊りながら<br/>
+(≠とRicoRico.の内装)<br/>
+未来までも夢が覚めても(「いままでありがとう」)軽快なタップダンスでも踊りながら<br/>
+(「ずっとりあちが俺の推しだ」)<br/>
 奏でるメロディとともに<br/>
 <br/>
 「本当にそれで良かったのか」って思いがこみ上げ<br/>
 水色の気持ちを拾い集めたら<br/>
 本当の答えがそこにある<br/>
-
+  </p>
+  <h1>MV必要素材</h1>
+  <p>
+    (1day=8h計算)<br/>
+    ・notの内装2day<br/>
+    ・RicoRicoの内装2day<br/>
+    ・notまでの道2day<br/>
+    ・RicoRicoまでの道2day<br/>
+    ・アルバム(チェキも画像化)1day<br/>
+    動画編集1day<br/>
+    計10day=80h<br/>
+    平日2h休日10h計算で66hしかない頑張れ()<br/>
   </p>
   <h2>封筒設計図</h2>
   <img src="./img/pic1.png" alt="土台">
