--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
   <img src="./img/tegami5.png" alt="5枚目">
   <img src="./img/tegami6.png" alt="6枚目">
   <img src="./img/tegami7.png" alt="7枚目">
+  <img src="./img/let01.png" alt="1枚">
+  <img src="./img/let02.png" alt="2枚">
+  <img src="./img/let03.png" alt="3枚">
+  <img src="./img/let04.png" alt="4枚">
+  <img src="./img/let05.png" alt="5枚">
+  <img src="./img/let06.png" alt="6枚">
+  <img src="./img/let07.png" alt="7枚">
+  <img src="./img/let08.png" alt="8枚">
+  <img src="./img/let09.png" alt="9枚">
+  <img src="./img/let10.png" alt="10枚">
+  <img src="./img/let11.png" alt="11枚">
+  <img src="./img/let12.png" alt="12枚">
+  <img src="./img/let13.png" alt="13枚">
+  <img src="./img/print1.png" alt="印刷1枚">
+  <img src="./img/print2.png" alt="印刷2枚">
   
   <h1>「りあち卒業祝いプロジェクト」</h1>
   <p>
