--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
   <img src="./img/tegami5.png" alt="5枚目">
   <img src="./img/tegami6.png" alt="6枚目">
   <img src="./img/tegami7.png" alt="7枚目">
+  <img src="./img/tegami01.png" alt="01枚目">
+  <img src="./img/tegami02.png" alt="02枚目">
+  <img src="./img/tegami03.png" alt="03枚目">
+  <img src="./img/tegami04.png" alt="04枚目">
+  <img src="./img/tegami05.png" alt="05枚目">
+  <img src="./img/tegami06.png" alt="06枚目">
+  <img src="./img/tegami07.png" alt="07枚目">
   <img src="./img/let01.png" alt="1枚">
   <img src="./img/let02.png" alt="2枚">
   <img src="./img/let03.png" alt="3枚">
