--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <img src="./img/let13.png" alt="13枚">
   <img src="./img/print1.png" alt="印刷1枚">
   <img src="./img/print2.png" alt="印刷2枚">
+  <img src="./img/clear.png" alt="クリアカード">
   
   <h1>「りあち卒業祝いプロジェクト」</h1>
   <p>
